@@ -35,4 +35,9 @@
 	<bean class="net.sourceforge.atunes.kernel.modules.playlist.PlayListRemoverFromDevice" scope="prototype"/>
 	
 	<bean class="net.sourceforge.atunes.kernel.modules.playlist.PlayListsChecker" scope="prototype"/>
+	
+	<bean class="net.sourceforge.atunes.kernel.modules.playlist.M3UPlayListReader" scope="prototype"/>
+	<bean class="net.sourceforge.atunes.kernel.modules.playlist.M3UPlayListWriter" scope="prototype"/>
+	<bean class="net.sourceforge.atunes.kernel.modules.playlist.PlayListWriter" scope="prototype"/>
+	<bean class="net.sourceforge.atunes.kernel.modules.playlist.PlayListReader" scope="prototype"/>
 </beans>
